feat: implement user email address verification API and swagger for label API and note API
